--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">OmiseTest</string>
+    <string name="enter_your_credit_card_number">Enter your credit card number</string>
+    <string name="amount_to_donate_hint">Enter amount you want to donate</string>
+    <string name="send_donation">Send donation</string>
 </resources>
